# naruto-jutsu

./: .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt  vercel.json
data/: graph_data.json  jutsus.jsonl
frontend/: .prettierrc  package-lock.json  package.json  svelte.config.js  vite.config.js
frontend/.vercel/output/functions/![-]/catchall.func/: .vc-config.json
frontend/.vercel/output/functions/![-]/catchall.func/.svelte-kit/output/server/: index.js
frontend/.vercel/output/functions/![-]/catchall.func/.svelte-kit/output/server/chunks/: dev.js  environment.js  index-server.js  internal.js
frontend/.vercel/output/functions/![-]/catchall.func/.svelte-kit/output/server/entries/fallbacks/: error.svelte.js
frontend/.vercel/output/functions/![-]/catchall.func/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
frontend/.vercel/output/functions/![-]/catchall.func/.svelte-kit/vercel-tmp/: manifest.js
frontend/.vercel/output/static/_app/: version.json
frontend/.vercel/output/static/_app/immutable/assets/: 0.BjsqHotc.css
frontend/.vercel/output/static/_app/immutable/chunks/: CdapQR_q.js  DervWhyw.js
frontend/.vercel/output/static/_app/immutable/entry/: app.BUqNSadH.js  start.CLYgBJzg.js
frontend/.vercel/output/static/_app/immutable/nodes/: 0.Bs3rsq_N.js  1.DG88KSh6.js  2.B9EFbyw0.js
frontend/src/: app.css  app.html
frontend/src/lib/: GraphView.js
frontend/src/routes/: +page.svelte
frontend/static/: graph_data.json
src/: app.py  process_data.py
web/: index.html
(+2 files in other folders)
